pulkitchhabra-salesforce/objects/Listed_Item__c.object
<CustomObject>
    <fields>
        <fullName>Active_Date__c</fullName>
        <formula>IF( Active__c  = True, Now(), Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Premiums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed Materials</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Desription__c</fullName>
        <label>Short Desription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Listed Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listed Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>